--- a/rethinkdb-spring-boot-starter/build.gradle
+++ b/rethinkdb-spring-boot-starter/build.gradle
@@ -1,39 +1,90 @@
+apply plugin: 'maven'
+
+ 
+
 group 'at.d4m.spring'
+
 version '1.0-SNAPSHOT'
 
+ 
+
 buildscript {
+
     ext.kotlin_version = '1.2.10'
+
+    ext.kotlinVersion = '1.2.10'
+
     ext.spring_boot_version = '2.0.0.M7'
 
+ 
+
     repositories {
+
         mavenCentral()
+
         maven { url "https://repo.spring.io/milestone" }
+
         maven { url "https://repo.spring.io/snapshot" }
+
+        maven { url "https://jitpack.io" }
+
     }
+
     dependencies {
+
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
         classpath "org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}"
+
     }
+
 }
+
+ 
 
 apply plugin: 'kotlin'
+
 apply plugin: 'kotlin-spring'
 
+ 
+
 repositories {
+
+    mavenLocal()
+
     mavenCentral()
+
     maven { url "https://repo.spring.io/milestone" }
+
     maven { url "https://repo.spring.io/snapshot" }
+
+    maven { url "https://jitpack.io" }
+
 }
+
+ 
 
 dependencies {
+
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+
     compile "org.springframework.boot:spring-boot-autoconfigure:$spring_boot_version"
-    compile project(':spring-data-rethinkdb')
+
+    compile 'com.github.AffanHasan:rxrethinkdb:-3dc44e959a-1'
+
 }
 
+ 
+
 compileKotlin {
+
     kotlinOptions.jvmTarget = "1.8"
+
 }
+
 compileTestKotlin {
+
     kotlinOptions.jvmTarget = "1.8"
+
 }
+
