--- a/spring-data-rethinkdb/build.gradle
+++ b/spring-data-rethinkdb/build.gradle
@@ -1,46 +1,104 @@
+apply plugin: 'maven'
+
+ 
+
 group 'at.d4m.spring'
+
 version '1.0-SNAPSHOT'
 
+ 
+
 buildscript {
+
     ext.kotlin_version = '1.2.10'
+
+    ext.kotlinVersion = '1.2.10'
+
     ext.spring_framework_version = '5.0.2.RELEASE'
+
     ext.junitPlatformVersion = '1.0.0'
+
     ext.junitJupiterVersion  = '5.0.0'
 
+ 
+
     repositories {
+
         mavenCentral()
+
         maven { url "https://repo.spring.io/milestone" }
+
         maven { url "https://repo.spring.io/snapshot" }
+
+       maven { url "https://jitpack.io" }
+
     }
+
     dependencies {
+
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
         classpath "org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}"
+
     }
+
 }
+
+ 
 
 apply plugin: 'kotlin'
+
 apply plugin: 'kotlin-spring'
 
+ 
+
 repositories {
+
+    mavenLocal()
+
     mavenCentral()
+
     maven { url "https://repo.spring.io/milestone" }
+
     maven { url "https://repo.spring.io/snapshot" }
+
+    maven { url "https://jitpack.io" }
+
 }
+
+ 
 
 dependencies {
+
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+
     compile 'org.springframework.data:spring-data-commons:2.0.2.RELEASE'
+
     compile "org.springframework:spring-context:$spring_framework_version"
-    compile project(':rxrethinkdb')
+
+    compile 'com.github.AffanHasan:rxrethinkdb:-SNAPSHOT'
+
+ 
 
     testCompile "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
+
     testRuntime "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
+
     testCompile 'com.nhaarman:mockito-kotlin-kt1.1:1.5.0'
+
 }
 
+ 
+
 compileKotlin {
+
     kotlinOptions.jvmTarget = "1.8"
+
 }
+
 compileTestKotlin {
+
     kotlinOptions.jvmTarget = "1.8"
+
 }
+
